Move layout components into layout module, fix header alignment

--- a/src/client/app/layout/toolbar/toolbar.component.scss
+++ b/src/client/app/layout/toolbar/toolbar.component.scss
@@ -24,8 +24,7 @@ h1 {
 }
 
 .user-controls {
-  float: right;
-  height: 2.2em;
-  margin-top: 1em;
-  margin-right: 0.4em;
+  top: 1em;
+  right: 4em;
+  position: absolute;
 }
